--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <header>
     <h1>Ramen Rating App</h1>
   </header>
-
+  <div>
+    <img src="./shoyu.jpg" alt="shoyu">
+    <img src="./nirvana.jpg" alt="nirvana">
+    <img src="./naruto.jpg" alt="naruto">
+    <img src="./kojiro.jpg" alt="kojiro">
+    <img src="./gyukotsu.jpg" alt="gyukotsu">
+  </div>
   <main>
     <div id="ramen-menu">
     </div>
@@ -31,9 +37,9 @@
         <button type="submit">Add Ramen</button>
       </form>
     </div>
-    <img src="" alt="">
-  </main>
 
+  </main>
+  
   <script src="app.js"></script>
 </body>
 </html>
