--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         <input type="text" id="ramen-restaurant-input" placeholder="Restaurant" required>
         <input type="text" id="ramen-rating-input" placeholder="Rating" required>
         <textarea id="ramen-comment-input" placeholder="Comment"></textarea>
+        <input type="text" id="image" placeholder="image url" required>
         <button type="submit">Add Ramen</button>
       </form>
     </div>
